# monoidal-plugins

./: CHANGELOG.md  README.md  monoidal-plugins.cabal
.github/workflows/: ci.yml
src/: MonoidalPlugins.hs
