cabal-version:      3.0
name:               monoidal-plugins
version:            0.1.0.0
synopsis: A monoidal interface for aggregating GHC plugins
description: A monoidal interface for aggregating GHC plugins
license:            BSD-3-Clause
license-file:       LICENSE
author:             Aaron Allen
maintainer:         aaronallen8455@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
                    README.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MonoidalPlugins
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.21.0.0,
                      ghc
    hs-source-dirs:   src
    default-language: GHC2021

test-suite monoidal-plugins-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.21.0.0,
        monoidal-plugins
