cabal-version:      3.0
name:               monoidal-plugins
version:            0.1.0.0
synopsis: A monoidal interface for aggregating GHC plugins
description: A monoidal interface for aggregating GHC plugins
license:            BSD-3-Clause
license-file:       LICENSE
author:             Aaron Allen
maintainer:         aaronallen8455@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
                    README.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MonoidalPlugins
    -- other-modules:
    -- other-extensions:
    build-depends:    base,
                      ghc >= 9.6 && < 9.13
    hs-source-dirs:   src
    default-language: GHC2021
