cabal-version:      3.0
name:               monoidal-plugins
version:            0.1.0.0
synopsis: A monoidal interface for aggregating GHC plugins
description: A monoidal interface for aggregating GHC plugins into a single plugin
category: Development
license:            BSD-3-Clause
license-file:       LICENSE
author:             Aaron Allen
maintainer:         aaronallen8455@gmail.com
copyright:          2025 Aaron Allen
build-type:         Simple
extra-doc-files:    CHANGELOG.md
                    README.md

source-repository head
  type: git
  location: https://github.com/aaronallen8455/monoidal-plugins

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MonoidalPlugins
    build-depends:    base < 5,
                      ghc >= 9.6 && < 9.13
    hs-source-dirs:   src
    default-language: GHC2021
